--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="inputHeight" name="height" min="1" value="1">
         Grid Width:
         <input type="number" id="inputWidth" name="width" min="1" value="1">
-        <input type="submit">
+        <button type="button">submit</button> 
     </form>
 
     <h2>Pick A Color</h2>
@@ -22,7 +22,6 @@
 
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
-
     <script src="designs.js"></script>
 </body>
 </html>
